src/main/gen/pascal/taie/intellij/tir/syntax/TirParser.java
// This is a generated file. Not intended for manual editing.
package pascal.taie.intellij.tir.syntax;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;

import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import static pascal.taie.intellij.tir.syntax.TirTypes.*;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class TirParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return tir_file(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // identifier_variable (LANGLE | RANGLE | CMP_OP | BIT_OP | ADD_OP | SUB_OP | MUL_OP | DIV_OP | MOD_OP) identifier_variable
  public static boolean binary_expr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "binary_expr")) return false;
    if (!nextTokenIs(builder_, "<binary expr>", CONSTANT_IDENTIFIER, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BINARY_EXPR, "<binary expr>");
    result_ = identifier_variable(builder_, level_ + 1);
    result_ = result_ && binary_expr_1(builder_, level_ + 1);
    result_ = result_ && identifier_variable(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // LANGLE | RANGLE | CMP_OP | BIT_OP | ADD_OP | SUB_OP | MUL_OP | DIV_OP | MOD_OP
  private static boolean binary_expr_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "binary_expr_1")) return false;
    boolean result_;
    result_ = consumeToken(builder_, LANGLE);
    if (!result_) result_ = consumeToken(builder_, RANGLE);
    if (!result_) result_ = consumeToken(builder_, CMP_OP);
    if (!result_) result_ = consumeToken(builder_, BIT_OP);
    if (!result_) result_ = consumeToken(builder_, ADD_OP);
    if (!result_) result_ = consumeToken(builder_, SUB_OP);
    if (!result_) result_ = consumeToken(builder_, MUL_OP);
    if (!result_) result_ = consumeToken(builder_, DIV_OP);
    if (!result_) result_ = consumeToken(builder_, MOD_OP);
    return result_;
  }

  /* ********************************************************** */
  // EXTENDS identifier_class (COMMA identifier_class)*
  public static boolean class_extends(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_extends")) return false;
    if (!nextTokenIs(builder_, EXTENDS)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, EXTENDS);
    result_ = result_ && identifier_class(builder_, level_ + 1);
    result_ = result_ && class_extends_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, CLASS_EXTENDS, result_);
    return result_;
  }

  // (COMMA identifier_class)*
  private static boolean class_extends_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_extends_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!class_extends_2_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "class_extends_2", pos_)) break;
    }
    return true;
  }

  // COMMA identifier_class
  private static boolean class_extends_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_extends_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && identifier_class(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // IMPLEMENTS identifier_class (COMMA identifier_class)*
  public static boolean class_implements(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_implements")) return false;
    if (!nextTokenIs(builder_, IMPLEMENTS)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IMPLEMENTS);
    result_ = result_ && identifier_class(builder_, level_ + 1);
    result_ = result_ && class_implements_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, CLASS_IMPLEMENTS, result_);
    return result_;
  }

  // (COMMA identifier_class)*
  private static boolean class_implements_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_implements_2")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!class_implements_2_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "class_implements_2", pos_)) break;
    }
    return true;
  }

  // COMMA identifier_class
  private static boolean class_implements_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_implements_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && identifier_class(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // field_def | method_def | COMMENT
  public static boolean class_member(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "class_member")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, CLASS_MEMBER, "<class member>");
    result_ = field_def(builder_, level_ + 1);
    if (!result_) result_ = method_def(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, COMMENT);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // MODIFIER* identifier_type identifier_field_list SEMICOLON
  public static boolean field_def(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "field_def")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, FIELD_DEF, "<field def>");
    result_ = field_def_0(builder_, level_ + 1);
    result_ = result_ && identifier_type(builder_, level_ + 1);
    result_ = result_ && identifier_field_list(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, SEMICOLON);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // MODIFIER*
  private static boolean field_def_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "field_def_0")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!consumeToken(builder_, MODIFIER)) break;
      if (!empty_element_parsed_guard_(builder_, "field_def_0", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER COLON identifier_type IDENTIFIER
  public static boolean field_ref(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "field_ref")) return false;
      if (!nextTokenIs(builder_, IDENTIFIER)) return false;
      boolean result_;
      Marker marker_ = enter_section_(builder_);
      result_ = consumeTokens(builder_, 0, IDENTIFIER, COLON);
      result_ = result_ && identifier_type(builder_, level_ + 1);
      result_ = result_ && consumeToken(builder_, IDENTIFIER);
      exit_section_(builder_, marker_, FIELD_REF, result_);
      return result_;
  }

    /* ********************************************************** */
    // LANGLE field_ref RANGLE
    public static boolean field_sig(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "field_sig")) return false;
        if (!nextTokenIs(builder_, LANGLE)) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = consumeToken(builder_, LANGLE);
        result_ = result_ && field_ref(builder_, level_ + 1);
        result_ = result_ && consumeToken(builder_, RANGLE);
        exit_section_(builder_, marker_, FIELD_SIG, result_);
        return result_;
    }

    /* ********************************************************** */
    // IDENTIFIER
    public static boolean identifier_class(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "identifier_class")) return false;
        if (!nextTokenIs(builder_, IDENTIFIER)) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = consumeToken(builder_, IDENTIFIER);
        exit_section_(builder_, marker_, IDENTIFIER_CLASS, result_);
    return result_;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean identifier_field(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identifier_field")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    exit_section_(builder_, marker_, IDENTIFIER_FIELD, result_);
    return result_;
  }

  /* ********************************************************** */
  // identifier_field (COMMA identifier_field)*
  public static boolean identifier_field_list(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identifier_field_list")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = identifier_field(builder_, level_ + 1);
    result_ = result_ && identifier_field_list_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, IDENTIFIER_FIELD_LIST, result_);
    return result_;
  }

  // (COMMA identifier_field)*
  private static boolean identifier_field_list_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identifier_field_list_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!identifier_field_list_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "identifier_field_list_1", pos_)) break;
    }
    return true;
  }

  // COMMA identifier_field
  private static boolean identifier_field_list_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identifier_field_list_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && identifier_field(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // IDENTIFIER | LANGLE IDENTIFIER RANGLE
  public static boolean identifier_method(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identifier_method")) return false;
    if (!nextTokenIs(builder_, "<identifier method>", IDENTIFIER, LANGLE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, IDENTIFIER_METHOD, "<identifier method>");
    result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = parseTokens(builder_, 0, LANGLE, IDENTIFIER, RANGLE);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // identifier_class (LBRACKET RBRACKET)? | NULL_TYPE
  public static boolean identifier_type(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identifier_type")) return false;
    if (!nextTokenIs(builder_, "<identifier type>", IDENTIFIER, NULL_TYPE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, IDENTIFIER_TYPE, "<identifier type>");
    result_ = identifier_type_0(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, NULL_TYPE);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // identifier_class (LBRACKET RBRACKET)?
  private static boolean identifier_type_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identifier_type_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = identifier_class(builder_, level_ + 1);
    result_ = result_ && identifier_type_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (LBRACKET RBRACKET)?
  private static boolean identifier_type_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identifier_type_0_1")) return false;
    identifier_type_0_1_0(builder_, level_ + 1);
    return true;
  }

  // LBRACKET RBRACKET
  private static boolean identifier_type_0_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identifier_type_0_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, LBRACKET, RBRACKET);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // IDENTIFIER | CONSTANT_IDENTIFIER
  public static boolean identifier_variable(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "identifier_variable")) return false;
    if (!nextTokenIs(builder_, "<identifier variable>", CONSTANT_IDENTIFIER, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, IDENTIFIER_VARIABLE, "<identifier variable>");
    result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = consumeToken(builder_, CONSTANT_IDENTIFIER);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // identifier_variable (COMMA identifier_variable)*
  public static boolean invoke_argument_list(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "invoke_argument_list")) return false;
    if (!nextTokenIs(builder_, "<invoke argument list>", CONSTANT_IDENTIFIER, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, INVOKE_ARGUMENT_LIST, "<invoke argument list>");
    result_ = identifier_variable(builder_, level_ + 1);
    result_ = result_ && invoke_argument_list_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (COMMA identifier_variable)*
  private static boolean invoke_argument_list_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "invoke_argument_list_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!invoke_argument_list_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "invoke_argument_list_1", pos_)) break;
    }
    return true;
  }

  // COMMA identifier_variable
  private static boolean invoke_argument_list_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "invoke_argument_list_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && identifier_variable(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // INVOKE_KEY (identifier_variable DOT)? invoke_method_ref LPAREN invoke_argument_list? RPAREN
  public static boolean invoke_expr(PsiBuilder builder_, int level_) {
      if (!recursion_guard_(builder_, level_, "invoke_expr")) return false;
      if (!nextTokenIs(builder_, INVOKE_KEY)) return false;
      boolean result_;
      Marker marker_ = enter_section_(builder_);
      result_ = consumeToken(builder_, INVOKE_KEY);
      result_ = result_ && invoke_expr_1(builder_, level_ + 1);
      result_ = result_ && invoke_method_ref(builder_, level_ + 1);
      result_ = result_ && consumeToken(builder_, LPAREN);
      result_ = result_ && invoke_expr_4(builder_, level_ + 1);
      result_ = result_ && consumeToken(builder_, RPAREN);
      exit_section_(builder_, marker_, INVOKE_EXPR, result_);
      return result_;
  }

  // (identifier_variable DOT)?
  private static boolean invoke_expr_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "invoke_expr_1")) return false;
    invoke_expr_1_0(builder_, level_ + 1);
    return true;
  }

  // identifier_variable DOT
  private static boolean invoke_expr_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "invoke_expr_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = identifier_variable(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, DOT);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

    // invoke_argument_list?
    private static boolean invoke_expr_4(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "invoke_expr_4")) return false;
        invoke_argument_list(builder_, level_ + 1);
        return true;
    }

  /* ********************************************************** */
  // LANGLE identifier_class COLON identifier_type identifier_method LPAREN (identifier_type (COMMA identifier_type)*)? RPAREN RANGLE
  public static boolean invoke_method_ref(PsiBuilder builder_, int level_) {
      if (!recursion_guard_(builder_, level_, "invoke_method_ref")) return false;
      if (!nextTokenIs(builder_, LANGLE)) return false;
      boolean result_;
      Marker marker_ = enter_section_(builder_);
      result_ = consumeToken(builder_, LANGLE);
      result_ = result_ && identifier_class(builder_, level_ + 1);
      result_ = result_ && consumeToken(builder_, COLON);
      result_ = result_ && identifier_type(builder_, level_ + 1);
      result_ = result_ && identifier_method(builder_, level_ + 1);
      result_ = result_ && consumeToken(builder_, LPAREN);
      result_ = result_ && invoke_method_ref_6(builder_, level_ + 1);
      result_ = result_ && consumeTokens(builder_, 0, RPAREN, RANGLE);
      exit_section_(builder_, marker_, INVOKE_METHOD_REF, result_);
      return result_;
  }

    // (identifier_type (COMMA identifier_type)*)?
    private static boolean invoke_method_ref_6(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "invoke_method_ref_6")) return false;
        invoke_method_ref_6_0(builder_, level_ + 1);
        return true;
    }

    // identifier_type (COMMA identifier_type)*
    private static boolean invoke_method_ref_6_0(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "invoke_method_ref_6_0")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = identifier_type(builder_, level_ + 1);
        result_ = result_ && invoke_method_ref_6_0_1(builder_, level_ + 1);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

    // (COMMA identifier_type)*
    private static boolean invoke_method_ref_6_0_1(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "invoke_method_ref_6_0_1")) return false;
        while (true) {
            int pos_ = current_position_(builder_);
            if (!invoke_method_ref_6_0_1_0(builder_, level_ + 1)) break;
            if (!empty_element_parsed_guard_(builder_, "invoke_method_ref_6_0_1", pos_)) break;
        }
        return true;
    }

    // COMMA identifier_type
    private static boolean invoke_method_ref_6_0_1_0(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "invoke_method_ref_6_0_1_0")) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_);
        result_ = consumeToken(builder_, COMMA);
        result_ = result_ && identifier_type(builder_, level_ + 1);
        exit_section_(builder_, marker_, null, result_);
        return result_;
    }

    /* ********************************************************** */
    // identifier_variable DOT field_sig
    //          | identifier_variable LBRACKET identifier_variable RBRACKET
    //          | identifier_variable
    public static boolean lvalue(PsiBuilder builder_, int level_) {
        if (!recursion_guard_(builder_, level_, "lvalue")) return false;
        if (!nextTokenIs(builder_, "<lvalue>", CONSTANT_IDENTIFIER, IDENTIFIER)) return false;
        boolean result_;
        Marker marker_ = enter_section_(builder_, level_, _NONE_, LVALUE, "<lvalue>");
        result_ = lvalue_0(builder_, level_ + 1);
        if (!result_) result_ = lvalue_1(builder_, level_ + 1);
        if (!result_) result_ = identifier_variable(builder_, level_ + 1);
        exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

    // identifier_variable DOT field_sig
  private static boolean lvalue_0(PsiBuilder builder_, int level_) {
      if (!recursion_guard_(builder_, level_, "lvalue_0")) return false;
      boolean result_;
      Marker marker_ = enter_section_(builder_);
      result_ = identifier_variable(builder_, level_ + 1);
      result_ = result_ && consumeToken(builder_, DOT);
      result_ = result_ && field_sig(builder_, level_ + 1);
      exit_section_(builder_, marker_, null, result_);
      return result_;
  }

    // identifier_variable LBRACKET identifier_variable RBRACKET
  private static boolean lvalue_1(PsiBuilder builder_, int level_) {
      if (!recursion_guard_(builder_, level_, "lvalue_1")) return false;
      boolean result_;
      Marker marker_ = enter_section_(builder_);
      result_ = identifier_variable(builder_, level_ + 1);
      result_ = result_ && consumeToken(builder_, LBRACKET);
      result_ = result_ && identifier_variable(builder_, level_ + 1);
      result_ = result_ && consumeToken(builder_, RBRACKET);
      exit_section_(builder_, marker_, null, result_);
      return result_;
  }

  /* ********************************************************** */
  // (method_body_var | method_body_line | method_body_catch)+
  public static boolean method_body(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "method_body")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, METHOD_BODY, "<method body>");
    result_ = method_body_0(builder_, level_ + 1);
    while (result_) {
      int pos_ = current_position_(builder_);
      if (!method_body_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "method_body", pos_)) break;
    }
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // method_body_var | method_body_line | method_body_catch
  private static boolean method_body_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "method_body_0")) return false;
    boolean result_;
    result_ = method_body_var(builder_, level_ + 1);
    if (!result_) result_ = method_body_line(builder_, level_ + 1);
    if (!result_) result_ = method_body_catch(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // TRY LBRACKET INTEGER COMMA INTEGER RPAREN COMMA CATCH identifier_variable AT INTEGER
  public static boolean method_body_catch(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "method_body_catch")) return false;
    if (!nextTokenIs(builder_, TRY)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, TRY, LBRACKET, INTEGER, COMMA, INTEGER, RPAREN, COMMA, CATCH);
    result_ = result_ && identifier_variable(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, AT, INTEGER);
    exit_section_(builder_, marker_, METHOD_BODY_CATCH, result_);
    return result_;
  }

  /* ********************************************************** */
  // LINE_NUMBER method_body_stmt SEMICOLON
  public static boolean method_body_line(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "method_body_line")) return false;
    if (!nextTokenIs(builder_, LINE_NUMBER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LINE_NUMBER);
    result_ = result_ && method_body_stmt(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, SEMICOLON);
    exit_section_(builder_, marker_, METHOD_BODY_LINE, result_);
    return result_;
  }

  /* ********************************************************** */
  // lvalue EQUAL rvalue
  //                    | identifier_variable EQUAL NEW identifier_type
  //                    | identifier_variable EQUAL NEW_ARRAY identifier_type LBRACKET identifier_variable RBRACKET
  //                    | THROW identifier_type
  //                    | CATCH identifier_variable
  //                    | invoke_expr
  //                    | IF LPAREN (unary_expr | binary_expr | IDENTIFIER) RPAREN GOTO INTEGER
  //                    | GOTO INTEGER
  //                    | RETURN identifier_variable?
  //                    | NOP
  public static boolean method_body_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "method_body_stmt")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, METHOD_BODY_STMT, "<method body stmt>");
    result_ = method_body_stmt_0(builder_, level_ + 1);
    if (!result_) result_ = method_body_stmt_1(builder_, level_ + 1);
    if (!result_) result_ = method_body_stmt_2(builder_, level_ + 1);
    if (!result_) result_ = method_body_stmt_3(builder_, level_ + 1);
    if (!result_) result_ = method_body_stmt_4(builder_, level_ + 1);
    if (!result_) result_ = invoke_expr(builder_, level_ + 1);
    if (!result_) result_ = method_body_stmt_6(builder_, level_ + 1);
    if (!result_) result_ = parseTokens(builder_, 0, GOTO, INTEGER);
    if (!result_) result_ = method_body_stmt_8(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, NOP);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // lvalue EQUAL rvalue
  private static boolean method_body_stmt_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "method_body_stmt_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = lvalue(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, EQUAL);
    result_ = result_ && rvalue(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // identifier_variable EQUAL NEW identifier_type
  private static boolean method_body_stmt_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "method_body_stmt_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = identifier_variable(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, EQUAL, NEW);
    result_ = result_ && identifier_type(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // identifier_variable EQUAL NEW_ARRAY identifier_type LBRACKET identifier_variable RBRACKET
  private static boolean method_body_stmt_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "method_body_stmt_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = identifier_variable(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, EQUAL, NEW_ARRAY);
    result_ = result_ && identifier_type(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, LBRACKET);
    result_ = result_ && identifier_variable(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RBRACKET);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }
